# skywrangler-web-server

./: .gitignore  LICENSE  README.md  main.py  mission-data.json  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  devscripts.conf  dput.cf  git-to-deb.sh  mavsdk-server  mock-logind  org.freedesktop.login1.service
debian/: .gitignore  changelog  control  dput.cf  install  postinst  release  service  socket
debian/etc/nginx/sites-available/: skywrangler-web-server
debian/source/: local-options
debian/var/lib/polkit-1/localauthority/10-vendor.d/: skywrangler-web-server.pkla
qgc_mission/: __init__.py  enums.py  params.py
scripts/: start-mission.sh
src/skywrangler_web_server/: __init__.py  __main__.py  api.py  drone.py  geo.py  main.py  mission.py  rpi.py  server.py
sw_mission/: __init__.py  geo.py  points.py
tests/: test_geo_module.py  test_mission_module.py  test_qgc_missinon.py  test_skywrangler_web_server.py
