[tool.poetry]
name = "skywrangler-web-server"
version = "0.1.0"
description = ""
authors = ["David Lechner <david@lechnology.com>"]

[tool.poetry.scripts]
skywrangler-web-server = 'skywrangler_web_server.__main__:main'

[tool.poetry.dependencies]
python = "3.9.2"
aiohttp = "3.7.4"
async-timeout = "3.0.1"
attrs = "20.3.0"
#chardet = "4.0.0"
multidict = "5.1.0"
typing-extensions = "3.7.4"
yarl = "1.6.3"

[tool.poetry.dev-dependencies]
pytest = "6.0.2"
black = {version = "20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
